--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-vendas
 springdoc.api-docs.path=/api-docs
 
 #postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/vendas
+spring.datasource.url = jdbc:postgresql://db:5432/vendas
 spring.datasource.username=postgres
 spring.datasource.password=123
 
